--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,4 @@ version = "0.1.0"
 authors = ["Stefano Chiodino <louderth@gmail.com>"]
 
 [dependencies]
+clap = {version = "2.26.2", features = ["yaml"]}
