--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ authors = ["Stefano Chiodino <louderth@gmail.com>"]
 
 [dependencies]
 clap = {version = "2.26.2", features = ["yaml"]}
+regex = "0.2"
+lazy_static = "0.2.9"
