--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ clap = {version = "2.26.2", features = ["yaml"]}
 regex = "0.2"
 lazy_static = "0.2.9"
 reqwest = "0.8.0"
+serde = "1.0.16"
+serde_json = "1.0.4"
+serde_derive = "1.0.16"
