I love you clippy

--- a/src/clap.yml
+++ b/src/clap.yml
@@ -3,9 +3,16 @@ version: "1.0"
 author: Stefano Chiodino <louderth@gmail.com>
 about: Optimise your cpu with the most profitable hasing algorithm on nicehash!
 args:
-    - wallet:
-        short: c
-        long: wallet
-        value_name: wallet_address
-        help: Set the user wallet address
+#    - wallet:
+#        short: c
+#        long: wallet
+#        value_name: wallet_address
+#        help: Set the user wallet address
+#        takes_value: true
+    - cpuminer-path:
+        short: p
+        long: cpuminer-path
+        value_name: cpuminer_path
+        help: Sets the path of cpuminer
         takes_value: true
+        default_value: cpuminer
