--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ serde = "1.0.16"
 serde_json = "1.0.4"
 serde_derive = "1.0.16"
 config = "0.6"
+clippy = {version = "*", optional = true}
+
+[features]
+default = []
