Lets go with CI!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nicehash-cpumulti-miner-optimiser"
+name = "niceprofit"
 version = "0.1.0"
 authors = ["Stefano Chiodino <louderth@gmail.com>"]
 
