--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,15 @@ matrix:
   include:
     # Linux
     - env: TARGET=i686-unknown-linux-gnu
-    - env: TARGET=i686-unknown-linux-musl
+    # - env: TARGET=i686-unknown-linux-musl
     - env: TARGET=x86_64-unknown-linux-gnu
-    - env: TARGET=x86_64-unknown-linux-musl
+    # - env: TARGET=x86_64-unknown-linux-musl
 
     # OSX
     #- env: TARGET=i686-apple-darwin
-      os: osx
-    - env: TARGET=x86_64-apple-darwin
-      #os: osx
+    #  os: osx
+    #- env: TARGET=x86_64-apple-darwin
+    #  os: osx
 
     # *BSD
     #- env: TARGET=i686-unknown-freebsd DISABLE_TESTS=1
