Force no https as the openssl doesn't work well between travis and other OSes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ clippy = {version = "*", optional = true}
 
 [features]
 default = []
+
+[dependencies.libinspire]
+git = "https://github.com/musoke/libinspire"
+branch = "no-https"
